# pysheet

./: .gitignore  Pipfile  basic.py  config.json  dodo.py  equation.py  equation_xy.py  main.py  print.sh  pyproject.toml  setup.py  tex.py  version.py  yael.json  yael.sh  yael_batch.sh  yoav.sh  yoav_batch.sh
pysheet/: arithmetic.py  clock.py  equation_1.py  equation_2.py  equation_3.py  frac.py  frac_1.py  frac_2.py  frac_3.py  frac_4.py  fun_square.py  percent.py  tex.py  word_problems.py
test/: test_frac.py  test_word_problems.py
