[tool.poetry]
name = "pysheet"
version = "0.1.0"
description = ""
authors = ["Gilad Kutiel <gilad.kutiel@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9.7"
numpy = "^1.23.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
rope = "^1.2.0"
autopep8 = "^1.6.0"
pytest = "^7.1.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gk-add = 'pysheet.arithmetic:add'
gk-sub = 'pysheet.arithmetic:sub'
gk-mul = 'pysheet.arithmetic:mul'
gk-div = 'pysheet.arithmetic:div'

gk-equation-1 = 'pysheet.equation_1:main'
gk-equation-2 = 'pysheet.equation_2:main'
gk-equation-3 = 'pysheet.equation_3:main'

gk-frac-1 = 'pysheet.frac_1:main'
gk-frac-2 = 'pysheet.frac_2:main'
gk-frac-3 = 'pysheet.frac_3:main'
gk-frac-4 = 'pysheet.frac_4:main'


gk-clock = 'pysheet.clock:main'

gk-word-problems = 'pysheet.word_problems:main'

gk-fun-square = 'pysheet.fun_square:main'
